syntax = "proto3";

package website;

service WebsiteService {
   rpc Scan (ScanParams) returns (Empty) {}
   rpc ScanStart (ScanParams) returns (Empty) {}
   rpc ScanEnd (ScanParams) returns (Empty) {}
}

message ScanParams {
   repeated string pages = 1; // list of pages returned.
   string domain = 2; // the url base of the crawl.
   uint32 user_id = 3; // user id performing scan.
   bool full = 4; // full crawl awaiting all links.
}

message Empty {}